[gd_scene load_steps=23 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Gameplay/Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Art/Units/Enemy 4 Small.png" type="Texture" id=3]
[ext_resource path="res://PreFabs/EnemyAnimator.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 138, 32, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 138, 32, 28 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 138, 32, 28 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 96, 138, 32, 28 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 128, 138, 32, 28 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 160, 138, 32, 28 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 54, 32, 28 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 32, 54, 32, 28 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 64, 54, 32, 28 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 110, 32, 28 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 32, 110, 32, 28 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 64, 110, 32, 28 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 96, 110, 32, 28 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 128, 110, 32, 28 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 160, 110, 32, 28 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 12.5 )

[node name="Enemy KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": ""
}
speed = 30.0
maxHp = 20.0
attackDelay = 1.0
pathToPlayer = NodePath("../../Player")

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Attack"
frame = 4
playing = true
script = ExtResource( 4 )
enemyPath = NodePath("..")

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 7 )
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 15.0
avoidance_enabled = true
radius = 100.0

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HitBox Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox Area2D"]
position = Vector2( 0, 2.5 )
shape = SubResource( 3 )

[connection signal="area_entered" from="HitBox Area2D" to="." method="_on_HitBox_Area2D_area_entered"]
